--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ body {
     background-image: url(".//assets/photo-portfolio.png");
     background-size: contain;
     background-repeat: no-repeat;
-    width: 350px;
+    width: 100%;
+    max-width: 350px;
     height: 340px;
 }
 
@@ -157,14 +158,16 @@ svg {
     align-items: center;
 }
 
-.projects span {
+.projects button {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 20px;
 }
 
-.projects-option2,
-.projects-option3 {
+#projects-option1,
+#projects-option2,
+#projects-option3 {
     border: 1px solid black;
     border-radius: 12px;
     padding: 12px 16px;
@@ -173,16 +176,20 @@ svg {
     font-weight: 500;
 }
 
-.projects-option1 {
-    border-radius: 12px;
-    padding: 12px 16px;
-    font-size: 18px;
-    color: white;
-    font-weight: 500;
+#projects-option1:hover,
+#projects-option2:hover,
+#projects-option3:hover,
+#projects-option1:focus,
+#projects-option2:focus,
+#projects-option3:focus {
     background-color: #2F80ED;
+    color: black;
 }
 
-.tags {
+#tags1,
+#tags2,
+#tags3,
+#tags-mobile {
     padding-top: 30px;
     color: #4F4F4F;
     font-size: 16px;
@@ -193,12 +200,18 @@ svg {
     margin-bottom: 30px;
 }
 
-.description #title {
+.description #title-proj1,
+#title-proj2,
+#title-proj3,
+#title-proj-mobile {
     font-size: 24px;
     font-weight: 600;
 }
 
-.description #text {
+.description #text1,
+#text2,
+#text3,
+#text-proj-mobile {
     color: #828282;
     font-size: 18px;
     font-weight: 500;
@@ -211,6 +224,7 @@ svg {
     border-radius: 12px;
     font-size: 18px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 .develop-option2 {
@@ -221,6 +235,7 @@ svg {
     margin-left: 20px;
     font-size: 18px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 #experience-desktop p,
@@ -336,7 +351,7 @@ svg {
 
     #experience-desktop {
         display: flex;
-        height: 58%;
+        height: 62%;
     }
 
     .date {
@@ -360,7 +375,7 @@ svg {
         margin-bottom: 24px;
         width: 245%;
         height: 90%;
-        margin-top: -80px;
+        margin-top: -10px;
     }
 
     .certificates {
